--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,40 @@
-# Compiled class file
+# Java / Build
 *.class
-
-# Log file
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+
+# Archives
+*.zip
+*.tar
+*.tar.gz
+
+
+# Eclipse
+.classpath
+.project
+.settings/
+.metadata/
+bin/
+recommenders/
+.factorypath
+
+
+# IntelliJ / VS Code (in case students use them)
+.idea/
+*.iml
+out/
+.vscode/
+
+
+# Maven / Gradle (if added later)
+.target/
+target/
+.gradle/
+build/
+
+
+# OS artifacts
+.DS_Store
+Thumbs.db
