chore: keep local translation helpers out of repo

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,7 @@ Thumbs.db
 # ---- If you keep 'bin' or a custom classes dir ----
 /bin/
 /examples-bin/
+
+# local-only translation helpers
+decode_md.sh
+test.txt
