Set MkDocs site_url

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: Java 21 Study Guide
+site_url: https://ars-digitale.github.io/java-21-study-guide/
 repo_url: https://github.com/Ars-Digitale/java-21-study-guide
 repo_name: Ars-Digitale/java-21-study-guide
 
