--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_url: https://ars-digitale.github.io/java-21-study-guide/
 repo_url: https://github.com/Ars-Digitale/java-21-study-guide
 repo_name: Ars-Digitale/java-21-study-guide
 
+strict: true
+
 docs_dir: docs
 site_dir: site
 
